# hilberg-scaling-neural-language-models-icsds-2025

./: .gitignore  CITATION.cff  README.md  params.csv  pyproject.toml
src/analysis/: PPM-D_estimator.py  lm_hilberg_scaling.py  pre-asymptotic_true_v_models.py
src/data/: build_dataset.py  clean.py  download.py  extract.py  shard.py
src/train/: gpt_model.py  train_all_models.py
talk/: presentation.tex
talk/abstract/: abstract.tex
